# FantasyDashboard

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTH_TEAMS_IMPLEMENTATION_DESIGN.md  CLAUDE.md  CODE_OF_CONDUCT.md  DEFENSE_PROJECTIONS_IMPLEMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
app-api/: .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
app-api/alembic/: env.py
app-api/alembic/versions/: 001_stage1_raw_ops.py  002_auth_and_teams.py
app-api/app/: main.py
app-api/app/api/: models.py  routes.py
app-api/app/api/routers/: actual.py  auth.py  players.py  projections.py  ros.py  scoring.py  teams.py  usage.py
app-api/app/core/: auth.py  cache.py  config.py  logging.py  middleware.py  projections_provider.py  rate_limit.py  settings.py
app-api/app/db/: async_session.py  models.py  session.py
app-api/app/repositories/: __init__.py  actual_points_repo.py  players_repo.py  projections_repo.py  scoring_repo.py  usage_repo.py
app-api/app/services/: roster_service.py
app-api/app/tests/: test_health.py  test_ops.py
app-api/tests/: conftest.py  test_main.py
app-api/tests/api/: test_health.py  test_players.py  test_projections.py  test_ros.py  test_scoring.py  test_usage.py
app-web/: .eslintrc.cjs  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
dwh/: .user.yml  Dockerfile  README.md  dbt_project.yml  packages.yml  profiles-example.yml
dwh/macros/: adaptive_shrinkage.sql  ewa.sql  (+7 more)
flows/: Dockerfile  README.md  pyproject.toml  requirements.txt
flows/config/: datasets.yml
flows/fantasy_ingest/: postgres.py  s3.py  settings.py  utils.py
flows/fantasy_ingest/adapters/: nflverse_loader.py  registry.py
flows/fantasy_ingest/runners/: load_partition.py
flows/flows/: backfill.py  daily_refresh.py  list_status.py
flows/tests/: test_registry.py
(+69 files in other folders)
